# node_face

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  addon.cc  api.txt  app.js  binding.gyp  build.bat  cm.bat  export.h  package-lock.json  package.json  stdafx.h  test.js
public/: index.html
public/css/: index.css
public/js/: index.js  util.js
src/: addon.cc  common.cpp  common.h  def.h  export.h  face.cpp  face.h  stdafx.h  test.cpp  tts.cpp  tts.h  video.cpp  video.h  worker.cpp  worker.h
